<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Супермаркет</string>
    <string name="type_1">Тип 1</string>
    <string name="type_2">Тип 2</string>
    <string name="type_3">Тип 3</string>
    <string name="type_4">Тип 4</string>
    <string name="type_5">Тип 5</string>
    <string name="name">Название:</string>
    <string name="type">Тип продукта:</string>
    <string name="price">Цена (руб.):</string>
    <string name="quantity">Количество:</string>
    <string name="buy">Покупка</string>
    <string name="sale">Поставка</string>
    <string name="sellAction">Поставить</string>
    <string name="buyAction">Купить</string>
    <string name="cancel">Отмена</string>
    <string name="fill_correct">Заполните это поле</string>
</resources>
