<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="left|center_vertical"
        android:stretchColumns="1"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp">

        <TableRow android:paddingBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/textView"
                android:gravity="left"
                android:layout_column="0"
                android:padding="3dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameEditText"
                android:layout_column="1"/>
        </TableRow>

        <TableRow android:paddingBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:id="@+id/textView1"
                android:gravity="left"
                android:layout_column="0"
                android:padding="3dp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/productTypeSpinner"
                android:layout_column="1"/>
        </TableRow>

        <TableRow android:paddingBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:id="@+id/textView2"
                android:gravity="left"
                android:layout_column="0"
                android:padding="3dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/priceEditText"
                android:inputType="number"
                android:layout_column="1"/>
        </TableRow>

        <TableRow android:paddingBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:id="@+id/textView3"
                android:gravity="left"
                android:layout_column="0"
                android:padding="3dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quantityEditText"
                android:inputType="number"
                android:layout_column="1"/>
        </TableRow>

        <TableRow android:paddingBottom="2dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sellAction"
                android:id="@+id/deliverButton"
                android:layout_column="1"/>
        </TableRow>
    </TableLayout>
</LinearLayout>